[package]
name = "simucom"
version = "0.1.0"
edition = "2021"

[dependencies]
bytebuffer = "2.3.0"
mil_std_1553b = "0.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.46.1", features = ["full"]}

[[bin]]
name = "gerant"
path = "src/gerant_main.rs"

[[bin]]
name = "abonne"
path = "src/abonne_main.rs"
